Fix use of internal xmlrpc.

--- a/trunk/UI/cli/Makefile.am
+++ b/trunk/UI/cli/Makefile.am
@@ -14,10 +14,13 @@ btgcli_LDADD   = $(top_builddir)/UI/cli/ncurses/libcommoncli.la \
 btgcli_LDFLAGS = @LIBS@ @BOOST_SYSTEM_LIB@ @BOOST_DATE_TIME_LIB@ @BOOST_IOSTREAMS_LIB@ @BOOST_FILESYSTEM_LIB@ @LIBGNUTLS_LIBS@ @BOOST_PROGRAM_OPTIONS_LIB@ @BOOST_THREAD_LIB@
 btgcli_CFLAGS   = @CFLAGS@ @LIBGNUTLS_CFLAGS@ \
 -DBTG_DEBUG=@BTG_DEBUG@ \
--DBTG_REV="@BTG_REV@"
+-DBTG_REV="@BTG_REV@" \
+-DBTG_INTERNAL_XMLRPC="@BTG_INTERNAL_XMLRPC@"
+
 btgcli_CXXFLAGS = @CXXFLAGS@ @LIBGNUTLS_CFLAGS@ \
 -DBTG_DEBUG=@BTG_DEBUG@ \
--DBTG_REV="@BTG_REV@"
+-DBTG_REV="@BTG_REV@" \
+-DBTG_INTERNAL_XMLRPC="@BTG_INTERNAL_XMLRPC@"
 
 INCLUDES = -I$(top_srcdir)
 
