--- a/trunk/UI/gui/Makefile.am
+++ b/trunk/UI/gui/Makefile.am
@@ -35,11 +35,13 @@ btgui_LDADD   = $(top_builddir)/bcore/libbtgcore.la \
 btgui_LDFLAGS  = @LIBS@ @GTKMM_LIBS@ @BOOST_SYSTEM_LIB@ @BOOST_DATE_TIME_LIB@ @BOOST_IOSTREAMS_LIB@ @BOOST_FILESYSTEM_LIB@ @LIBGNUTLS_LIBS@ @BOOST_PROGRAM_OPTIONS_LIB@ @BOOST_THREAD_LIB@
 btgui_CXXFLAGS = @CXXFLAGS@ @GTKMM_CFLAGS@ @LIBGNUTLS_CFLAGS@ \
 -DBTG_DEBUG=@BTG_DEBUG@ \
--DBTG_REV="@BTG_REV@"
+-DBTG_REV="@BTG_REV@" \
+-DBTG_INTERNAL_XMLRPC="@BTG_INTERNAL_XMLRPC@"
 
 btgui_CFLAGS   = @CFLAGS@ @LIBGNUTLS_CFLAGS@ \
 -DBTG_DEBUG=@BTG_DEBUG@ \
--DBTG_REV="@BTG_REV@"
+-DBTG_REV="@BTG_REV@" \
+-DBTG_INTERNAL_XMLRPC="@BTG_INTERNAL_XMLRPC@"
 
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/external
 man1_MANS  = btgui.man
