--- a/trunk/daemon/Makefile.am
+++ b/trunk/daemon/Makefile.am
@@ -54,7 +54,8 @@ libdaemon_la_CFLAGS   = @CFLAGS@ @DEBUG_CFLAGS@ -DBTG_DEBUG=@BTG_DEBUG@ \
 -DBTG_OPTION_UPNP=@BTG_OPTION_UPNP@ \
 -DBTG_OPTION_USELTUPNP=@BTG_OPTION_USELTUPNP@ \
 -DBTG_OPTION_USECYBERLINK=@BTG_OPTION_USECYBERLINK@ @CYBERLINK_CFLAGS@ \
--DBTG_REV="@BTG_REV@" $(URL_DEFINES)
+-DBTG_REV="@BTG_REV@" $(URL_DEFINES) \
+-DBTG_INTERNAL_XMLRPC="@BTG_INTERNAL_XMLRPC@"
 
 libdaemon_la_CXXFLAGS = @CXXFLAGS@ @DEBUG_CXXFLAGS@ -DBTG_DEBUG=@BTG_DEBUG@ \
 -DBTG_OPTION_SAVESESSIONS=@BTG_OPTION_SAVESESSIONS@ \
@@ -62,7 +63,8 @@ libdaemon_la_CXXFLAGS = @CXXFLAGS@ @DEBUG_CXXFLAGS@ -DBTG_DEBUG=@BTG_DEBUG@ \
 -DBTG_OPTION_UPNP=@BTG_OPTION_UPNP@ \
 -DBTG_OPTION_USELTUPNP=@BTG_OPTION_USELTUPNP@ \
 -DBTG_OPTION_USECYBERLINK=@BTG_OPTION_USECYBERLINK@ @CYBERLINK_CFLAGS@ \
--DBTG_REV="@BTG_REV@" $(URL_DEFINES)
+-DBTG_REV="@BTG_REV@" $(URL_DEFINES) \
+-DBTG_INTERNAL_XMLRPC="@BTG_INTERNAL_XMLRPC@"
 
 bin_PROGRAMS = btgdaemon 
 
@@ -94,14 +96,16 @@ btgdaemon_CFLAGS   = @CFLAGS@   @DEBUG_CFLAGS@ @LIBGNUTLS_CFLAGS@ \
 -DBTG_OPTION_EVENTCALLBACK=@BTG_OPTION_EVENTCALLBACK@ \
 -DBTG_OPTION_UPNP=@BTG_OPTION_UPNP@ \
 -DBTG_OPTION_USELTUPNP=@BTG_OPTION_USELTUPNP@ \
--DBTG_OPTION_USECYBERLINK=@BTG_OPTION_USECYBERLINK@ @CYBERLINK_CFLAGS@ $(URL_DEFINES)
+-DBTG_OPTION_USECYBERLINK=@BTG_OPTION_USECYBERLINK@ @CYBERLINK_CFLAGS@ $(URL_DEFINES) \
+-DBTG_INTERNAL_XMLRPC="@BTG_INTERNAL_XMLRPC@"
 
 btgdaemon_CXXFLAGS = @CXXFLAGS@ @DEBUG_CXXFLAGS@ @LIBGNUTLS_CFLAGS@ \
 -DBTG_DEBUG=@BTG_DEBUG@ -DBTG_OPTION_SAVESESSIONS=@BTG_OPTION_SAVESESSIONS@ \
 -DBTG_OPTION_EVENTCALLBACK=@BTG_OPTION_EVENTCALLBACK@ \
 -DBTG_OPTION_UPNP=@BTG_OPTION_UPNP@ \
 -DBTG_OPTION_USELTUPNP=@BTG_OPTION_USELTUPNP@ \
--DBTG_OPTION_USECYBERLINK=@BTG_OPTION_USECYBERLINK@ @CYBERLINK_CFLAGS@ $(URL_DEFINES)
+-DBTG_OPTION_USECYBERLINK=@BTG_OPTION_USECYBERLINK@ @CYBERLINK_CFLAGS@ $(URL_DEFINES) \
+-DBTG_INTERNAL_XMLRPC="@BTG_INTERNAL_XMLRPC@"
 
 INCLUDES = @LIBTORRENT_CFLAGS@ -I$(top_srcdir)
 
