--- a/trunk/UI/gui/viewer/sdl/Makefile.am
+++ b/trunk/UI/gui/viewer/sdl/Makefile.am
@@ -13,11 +13,13 @@ btgvs_LDFLAGS = @LIBS@ @AGAR_LIBS@ @BOOST_SYSTEM_LIB@ @BOOST_DATE_TIME_LIB@ @BOO
 
 btgvs_CXXFLAGS = @CXXFLAGS@ @LIBGNUTLS_CFLAGS@ @AGAR_CFLAGS@ \
 -DBTG_DEBUG=@BTG_DEBUG@ \
--DBTG_REV="@BTG_REV@"
+-DBTG_REV="@BTG_REV@" \
+-DBTG_INTERNAL_XMLRPC="@BTG_INTERNAL_XMLRPC@"
 
 btgvs_CFLAGS   = @CFLAGS@ @LIBGNUTLS_CFLAGS@ @AGAR_CFLAGS@ \
 -DBTG_DEBUG=@BTG_DEBUG@ \
--DBTG_REV="@BTG_REV@"
+-DBTG_REV="@BTG_REV@" \
+-DBTG_INTERNAL_XMLRPC="@BTG_INTERNAL_XMLRPC@"
 
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/external
 man1_MANS  = btgvs.man
