--- a/trunk/daemon/http/Makefile.am
+++ b/trunk/daemon/http/Makefile.am
@@ -5,12 +5,14 @@ if BUILDURL
   libhttp_la_CFLAGS  = @CFLAGS@ @DEBUG_CFLAGS@ \
   -DBTG_DEBUG=@BTG_DEBUG@ -DBTG_OPTION_SAVESESSIONS=@BTG_OPTION_SAVESESSIONS@ \
   -DBTG_OPTION_EVENTCALLBACK=@BTG_OPTION_EVENTCALLBACK@ \
-  -DBTG_SVNREV="@BTG_SVNREV@" @LIBCURL_CPPFLAGS@
+  -DBTG_SVNREV="@BTG_SVNREV@" @LIBCURL_CPPFLAGS@ \
+  -DBTG_INTERNAL_XMLRPC="@BTG_INTERNAL_XMLRPC@"
 
   libhttp_la_CXXFLAGS  = @CXXFLAGS@ @DEBUG_CXXFLAGS@ \
   -DBTG_DEBUG=@BTG_DEBUG@ -DBTG_OPTION_SAVESESSIONS=@BTG_OPTION_SAVESESSIONS@ \
   -DBTG_OPTION_EVENTCALLBACK=@BTG_OPTION_EVENTCALLBACK@ \
-  -DBTG_SVNREV="@BTG_SVNREV@" @LIBCURL_CPPFLAGS@
+  -DBTG_SVNREV="@BTG_SVNREV@" @LIBCURL_CPPFLAGS@ \
+  -DBTG_INTERNAL_XMLRPC="@BTG_INTERNAL_XMLRPC@"
 
   INCLUDES = @LIBTORRENT_CFLAGS@ -I$(top_srcdir)
 else
