--- a/trunk/daemon/upnp/Makefile.am
+++ b/trunk/daemon/upnp/Makefile.am
@@ -19,13 +19,15 @@ libupnp_la_CFLAGS   = @CFLAGS@ @DEBUG_CFLAGS@ -DBTG_DEBUG=@BTG_DEBUG@ \
 -DBTG_OPTION_EVENTCALLBACK=@BTG_OPTION_EVENTCALLBACK@ \
 -DBTG_OPTION_UPNP=@BTG_OPTION_UPNP@ \
 -DBTG_OPTION_USECYBERLINK=@BTG_OPTION_USECYBERLINK@ @CYBERLINK_CFLAGS@ \
--DBTG_REV="@BTG_REV@"
+-DBTG_REV="@BTG_REV@" \
+-DBTG_INTERNAL_XMLRPC="@BTG_INTERNAL_XMLRPC@"
 
 libupnp_la_CXXFLAGS = @CXXFLAGS@ @DEBUG_CXXFLAGS@ -DBTG_DEBUG=@BTG_DEBUG@ \
 -DBTG_OPTION_SAVESESSIONS=@BTG_OPTION_SAVESESSIONS@ \
 -DBTG_OPTION_EVENTCALLBACK=@BTG_OPTION_EVENTCALLBACK@ \
 -DBTG_OPTION_UPNP=@BTG_OPTION_UPNP@ \
 -DBTG_OPTION_USECYBERLINK=@BTG_OPTION_USECYBERLINK@ @CYBERLINK_CFLAGS@ \
--DBTG_REV="@BTG_REV@"
+-DBTG_REV="@BTG_REV@" \
+-DBTG_INTERNAL_XMLRPC="@BTG_INTERNAL_XMLRPC@"
 
 INCLUDES = @LIBTORRENT_CFLAGS@ -I$(top_srcdir)
