Fix of bug 13983.

--- a/trunk/UI/gui/Makefile.am
+++ b/trunk/UI/gui/Makefile.am
@@ -29,11 +29,14 @@ usermessage.h guiutils.h
 btgui_LDADD   = $(top_builddir)/bcore/libbtgcore.la \
                 $(top_builddir)/bcore/client/libbtgclient.la \
                 $(top_builddir)/external/ini/libini.la \
-                $(top_builddir)/external/plotmm/libplotmm.la \
                 $(top_builddir)/bcore/libbtgcore.la
 
+if BUILDINTERNALPLOTMM
+btgui_LDADD  += $(top_builddir)/external/plotmm/libplotmm.la
+endif
+
 btgui_LDFLAGS  = @LIBS@ @GTKMM_LIBS@ @BOOST_SYSTEM_LIB@ @BOOST_DATE_TIME_LIB@ @BOOST_IOSTREAMS_LIB@ @BOOST_FILESYSTEM_LIB@ @LIBGNUTLS_LIBS@ @BOOST_PROGRAM_OPTIONS_LIB@ @BOOST_THREAD_LIB@
-btgui_CXXFLAGS = @CXXFLAGS@ @GTKMM_CFLAGS@ @LIBGNUTLS_CFLAGS@ \
+btgui_CXXFLAGS = @CXXFLAGS@ @GTKMM_CFLAGS@ @LIBGNUTLS_CFLAGS@ @PLOTMM_LDFLAGS@ @PLOTMM_CXXFLAGS@ \
 -DBTG_DEBUG=@BTG_DEBUG@ \
 -DBTG_REV="@BTG_REV@" \
 -DBTG_INTERNAL_XMLRPC="@BTG_INTERNAL_XMLRPC@"
