--- a/trunk/bcore/Makefile.am
+++ b/trunk/bcore/Makefile.am
@@ -130,7 +130,7 @@ $(AUTH_SOURCES) \
 bitvector.cpp \
 urlstatus.cpp
 
-libbtgcore_la_LIBADD = @XMLRPC_LDFLAGS@ @LIBTORRENT_LIBS@ @BOOST_IOSTREAMS_LIB@ \
+libbtgcore_la_LIBADD = @XMLRPC_LDFLAGS@ @BOOST_IOSTREAMS_LIB@ \
 @LIBGNUTLS_LIBS@ @BOOST_PROGRAM_OPTIONS_LIB@ \
 @BOOST_THREAD_LIB@ @BOOST_FILESYSTEM_LIB@ @BOOST_SYSTEM_LIB@
 
