added -I m4 to aclocal directives (configure.in, Makefile.am) - fixes reconfigure-on-the-fly added BOOST_DATE_TIME_LIB to libbtgcore and libdaemon

--- a/trunk/bcore/Makefile.am
+++ b/trunk/bcore/Makefile.am
@@ -132,7 +132,8 @@ urlstatus.cpp
 
 libbtgcore_la_LIBADD = @XMLRPC_LDFLAGS@ @BOOST_IOSTREAMS_LIB@ \
 @LIBGNUTLS_LIBS@ @BOOST_PROGRAM_OPTIONS_LIB@ \
-@BOOST_THREAD_LIB@ @BOOST_FILESYSTEM_LIB@ @BOOST_SYSTEM_LIB@
+@BOOST_THREAD_LIB@ @BOOST_FILESYSTEM_LIB@ @BOOST_SYSTEM_LIB@ \
+@BOOST_DATE_TIME_LIB@
 
 if BUILDINTERNALXMLRPC
   libbtgcore_la_LIBADD += $(top_builddir)/external/xmlrpc-epi/src/libxmlrpc.la
