--- a/trunk/daemon/Makefile.am
+++ b/trunk/daemon/Makefile.am
@@ -90,7 +90,8 @@ btgdaemon_LDADD   = $(top_builddir)/bcore/libbtgcore.la \
                     $(UPNP_LDADD) $(HTTP_LDADD) \
                     @LIBS@ @LIBTORRENT_LIBS@ @BOOST_SYSTEM_LIB@ @BOOST_IOSTREAMS_LIB@ \
                     @LIBGNUTLS_LIBS@ @BOOST_THREAD_LIB@ @BOOST_FILESYSTEM_LIB@ \
-                    @BOOST_PROGRAM_OPTIONS_LIB@ @XMLRPC_LDFLAGS@ $(URL_LIBS) $(CYBERLINK_LDADD)
+                    @BOOST_PROGRAM_OPTIONS_LIB@ @XMLRPC_LDFLAGS@ @BOOST_DATE_TIME_LIB@ \
+                    $(URL_LIBS) $(CYBERLINK_LDADD)
 
 #btgdaemon_LDFLAGS  = -all-static
 
