--- a/trunk/configure.in
+++ b/trunk/configure.in
@@ -267,6 +267,15 @@ fi
 
 AC_CACHE_SAVE
 
+dnl Argument: disable building the daemon.
+AC_ARG_ENABLE(daemon, AC_HELP_STRING([--enable-daemon],[enable building the daemon]),
+[case "${enableval}" in
+yes) builddaemon=true ;;
+no)  builddaemon=false ;;
+*) AC_MSG_ERROR(bad value ${enableval} for --enable-daemon) ;;
+esac],[builddaemon=true])
+AM_CONDITIONAL(BUILDDAEMON, test x$builddaemon = xtrue)
+
 dnl Argument: build the gui.
 
 AC_ARG_ENABLE(gui, AC_HELP_STRING([--enable-gui],[build gtkmm gui client]),
@@ -391,6 +400,14 @@ else
 fi
 
 AC_SUBST(BTG_DEBUG)
+
+AC_MSG_CHECKING([whether the daemon should be built])
+
+if test "$builddaemon" == "true"; then
+        AC_MSG_RESULT([yes])
+else
+        AC_MSG_RESULT([no])
+fi
 
 AC_MSG_CHECKING([whether the GUI should be built])
 if test "$buildgui" == "true"; then
@@ -546,6 +563,12 @@ BTG_LINK_CHECK
 AC_OUTPUT(Makefile external/Makefile external/xmlrpc-epi/Makefile external/xmlrpc-epi/src/Makefile external/xmlrpc-epi/expat/Makefile external/xmlrpc-epi/expat/xmlparse/Makefile external/xmlrpc-epi/expat/xmltok/Makefile external/ini/Makefile external/plotmm/Makefile bcore/Makefile bcore/client/Makefile daemon/Makefile daemon/http/Makefile daemon/upnp/Makefile daemon/ipfilter/Makefile daemon/auth/Makefile daemon/resource/Makefile utest/Makefile stest/Makefile doc/Makefile doc/commands/Makefile doc/site/Makefile UI/Makefile UI/cli/Makefile UI/cli/ncurses/Makefile UI/gui/Makefile UI/gui/viewer/Makefile UI/gui/viewer/sdl/Makefile UI/www/Makefile UI/www/php/Makefile UI/www/php/htdocs/bcore/command/Makefile UI/www/php/htdocs/bcore/Makefile UI/www/php/htdocs/images/Makefile UI/www/php/htdocs/Makefile UI/www/php/htdocs/version.php script/Makefile script/btg-config)
 
 AC_MSG_NOTICE([Status:])
+
+if test "$builddaemon" == "true"; then
+        AC_MSG_NOTICE([btg-daemon    : enabled])
+else
+        AC_MSG_NOTICE([btg-daemon    : disabled])
+fi
 
 if test "$gen_btg_config" == "true"; then
         AC_MSG_NOTICE([btg-config    : enabled])
