--- a/DEBIAN/1.0.0-558svn/debian/control.in
+++ b/DEBIAN/1.0.0-558svn/debian/control.in
@@ -2,11 +2,19 @@ Source: btg@SUFFIX@
 Section: net
 Priority: extra
 Maintainer: Roman Rybalko <btg@romanr.info>
-Build-Depends: debhelper (>= 5), automake, pkg-config, dialog, libtorrent-rasterbar-dev (>= 0.13) | libtorrent-dev (>= 0.12) | libtorrent-rasterbar-0.14.1-dev | libtorrent-rasterbar-0.14.2-dev | libtorrent-rasterbar-0.14.1-dev | libtorrent-rasterbar-0.14.1-dev, libboost-iostreams1.35-dev, libboost-filesystem1.35-dev, libboost-date-time1.35-dev, libboost-thread1.35-dev, libboost-program-options1.35-dev, libncurses5-dev, libgnutls-dev, libgtkmm-2.4-dev, libcppunit-dev
+Build-Depends: debhelper (>= 5), automake, pkg-config, dialog,
+ libtorrent-rasterbar-dev (>= 0.13) | libtorrent-dev (>= 0.12) | libtorrent-rasterbar-0.14.1-dev | libtorrent-rasterbar-0.14.2-dev,
+ libboost-iostreams1.35-dev | libboost-iostreams1.36-dev | libboost-iostreams1.37-dev | libboost-iostreams1.38-dev,
+ libboost-filesystem1.35-dev | libboost-filesystem1.36-dev | libboost-filesystem1.37-dev | libboost-filesystem1.38-dev,
+ libboost-date-time1.35-dev | libboost-date-time1.36-dev | libboost-date-time1.37-dev | libboost-date-time1.38-dev,
+ libboost-thread1.35-dev | libboost-thread1.36-dev | libboost-thread1.37-dev | libboost-thread1.38-dev,
+ libboost-program-options1.35-dev | libboost-program-options1.36-dev | libboost-program-options1.37-dev | libboost-program-options1.38-dev,
+ libncurses5-dev, libgnutls-dev, libgtkmm-2.4-dev, libcppunit-dev
 Standards-Version: 3.7.3
 
 Package: btg-common@SUFFIX@
-Depends: libboost-date-time1.35.0, libboost-filesystem1.35.0, libboost-thread1.35.0, libboost-iostreams1.35.0, libboost-program-options1.35.0, libgnutls26 (>= 2.4), zlib1g (>= 1:1.2.3), dialog
+Depends: libboost-date-time1.37.0, libboost-filesystem1.37.0, libboost-thread1.37.0, libboost-iostreams1.37.0,
+ libboost-program-options1.37.0, libgnutls26 (>= 2.4), zlib1g (>= 1:1.2.3), dialog
 Conflicts: btg-common, btg-common-0.9.7, btg-common-0.9.8, btg-common-0.9.9
 Recommends: btg-daemon@SUFFIX@ | btg-gui@SUFFIX@ | btg-cli@SUFFIX@
 Architecture: i386 i586 i686 amd64
@@ -90,7 +98,7 @@ Description: web interface to the BTG daemon
  http://btg.berlios.de
 
 Package: btg-daemon@SUFFIX@
-Depends: btg-common@SUFFIX@ (= @VERSION@), libtorrent-rasterbar (= 0.14.2) | libtorrent-rasterbar-0.14.2
+Depends: btg-common@SUFFIX@ (= @VERSION@), libtorrent-rasterbar2 (>= 0.14) | libtorrent-rasterbar-0.14
 Recommends: btg-gui@SUFFIX@, btg-cli@SUFFIX@, btg-www@SUFFIX@
 Architecture: i386 i586 i686 amd64
 Section: net
