Added use of XMLRPC_CFLAGS.

--- a/trunk/bcore/client/Makefile.am
+++ b/trunk/bcore/client/Makefile.am
@@ -33,11 +33,13 @@ ratio.h \
 cpif.h \
 urlhelper.h loadhelper.h
 
-libbtgclient_la_CFLAGS   = @DEBUG_CFLAGS@ -DBTG_DEBUG=@BTG_DEBUG@ \
+libbtgclient_la_CFLAGS   = @DEBUG_CFLAGS@ @XMLRPC_CFLAGS@ \
+                           -DBTG_DEBUG=@BTG_DEBUG@ \
                            -DBTG_REV="@BTG_REV@" \
                            -DBTG_INTERNAL_XMLRPC="@BTG_INTERNAL_XMLRPC@"
 
-libbtgclient_la_CXXFLAGS = @DEBUG_CXXFLAGS@ -DBTG_DEBUG=@BTG_DEBUG@ \
+libbtgclient_la_CXXFLAGS = @DEBUG_CXXFLAGS@ @XMLRPC_CFLAGS@ \
+                           -DBTG_DEBUG=@BTG_DEBUG@ \
                            -DBTG_REV="@BTG_REV@" \
                            -DBTG_INTERNAL_XMLRPC="@BTG_INTERNAL_XMLRPC@"
 
