Added missing images, fix of bug 15571.

--- a/trunk/UI/www/php/htdocs/images/Makefile.am
+++ b/trunk/UI/www/php/htdocs/images/Makefile.am
@@ -2,7 +2,7 @@ WWW_UI_DEST  = $(datadir)/wwwbtg/htdocs/images
 WWW_UI_FILES = bottom.gif btn1.gif \
 	btn2.gif middle.gif progress_download.gif \
 	progress_finish.gif progress_seed.gif \
-	rowhover.gif top.gif
+	rowhover.gif top.gif en.gif hu.gif
 EXTRA_DIST = $(WWW_UI_FILES)
 
 if BUILDWWW
