--- a/trunk/UI/gui/Makefile.am
+++ b/trunk/UI/gui/Makefile.am
@@ -35,13 +35,14 @@ if BUILDINTERNALPLOTMM
 btgui_LDADD  += $(top_builddir)/external/plotmm/libplotmm.la
 endif
 
-btgui_LDFLAGS  = @LIBS@ @GTKMM_LIBS@ @BOOST_SYSTEM_LIB@ @BOOST_DATE_TIME_LIB@ @BOOST_IOSTREAMS_LIB@ @BOOST_FILESYSTEM_LIB@ @LIBGNUTLS_LIBS@ @BOOST_PROGRAM_OPTIONS_LIB@ @BOOST_THREAD_LIB@
-btgui_CXXFLAGS = @CXXFLAGS@ @GTKMM_CFLAGS@ @LIBGNUTLS_CFLAGS@ @PLOTMM_LDFLAGS@ @PLOTMM_CXXFLAGS@ \
+btgui_LDFLAGS  = @LIBS@ @GTKMM_LIBS@ @BOOST_SYSTEM_LIB@ @BOOST_DATE_TIME_LIB@ @BOOST_IOSTREAMS_LIB@ @BOOST_FILESYSTEM_LIB@ @LIBGNUTLS_LIBS@ @BOOST_PROGRAM_OPTIONS_LIB@ @BOOST_THREAD_LIB@ @PLOTMM_LDFLAGS@
+
+btgui_CXXFLAGS = @CXXFLAGS@ @XMLRPC_CFLAGS@ @GTKMM_CFLAGS@ @LIBGNUTLS_CFLAGS@ @PLOTMM_CXXFLAGS@ \
 -DBTG_DEBUG=@BTG_DEBUG@ \
 -DBTG_REV="@BTG_REV@" \
 -DBTG_INTERNAL_XMLRPC="@BTG_INTERNAL_XMLRPC@"
 
-btgui_CFLAGS   = @CFLAGS@ @LIBGNUTLS_CFLAGS@ \
+btgui_CFLAGS   = @CFLAGS@ @XMLRPC_CFLAGS@ @LIBGNUTLS_CFLAGS@ \
 -DBTG_DEBUG=@BTG_DEBUG@ \
 -DBTG_REV="@BTG_REV@" \
 -DBTG_INTERNAL_XMLRPC="@BTG_INTERNAL_XMLRPC@"
